# rs-list-unsubscribe

./: Cargo.toml  Makefile  README.md
src/: main.rs
